--- a/style/style.css
+++ b/style/style.css
@@ -516,11 +516,8 @@ input[type=checkbox]:before {
   height: 100%;
   z-index: 4;
 }
-.gallery-expanded .gallery-display-area {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-direction: row;
+.gallery-expanded .gallery-display-area,
+.gallery-expanded .gallery-display-area-one-item {
   position: absolute;
   width: 100%;
   max-width: 100rem;
@@ -530,6 +527,18 @@ input[type=checkbox]:before {
   background-color: #f5f5f5;
   z-index: 2;
   border-radius: 3.5rem;
+}
+.gallery-expanded .gallery-display-area {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+}
+.gallery-expanded .gallery-display-area-one-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 .gallery-expanded .img-wrapper {
   width: 100%;
