--- a/style/_varukorg.scss
+++ b/style/_varukorg.scss
@@ -91,6 +91,13 @@ main.varukorg {
 
 @media screen and (max-width: 665px) {
   main.varukorg {
+    .varor {
+      .labels,
+      article {
+        @include grid($columns: 4fr 1fr 1.3fr);
+        width: 100%;
+      }
+    }
     .varor,
     .leverans {
       width: 100%;
