--- a/style/_header.scss
+++ b/style/_header.scss
@@ -22,21 +22,9 @@ header {
   .logo-search-container {
     @include flex(center, space-between, row);
   }
-  .logo-desktop {
+  .logo {
     width: 16.3rem;
     height: 4.4rem;
-    img {
-      width: 100%;
-      height: 100%;
-    }
-  }
-
-  // Is shown at max-width: 480px
-  .logo-mobile {
-    margin-top: 0.2rem;
-    width: 4rem;
-    height: 4.8rem;
-    display: none;
     img {
       width: 100%;
       height: 100%;
@@ -193,11 +181,14 @@ header {
 
 @media screen and (max-width: 480px) {
   header {
-    .logo-desktop {
-      display: none;
-    }
-    .logo-mobile {
-      display: block;
+    .logo {
+      margin-top: 0.2rem;
+      width: 4rem;
+      height: 4.8rem;
+      img {
+        width: 100%;
+        height: 100%;
+      }
     }
   }
 }
