Improved the nav by removing .html from links and implemented an active link styling

--- a/style/style.css
+++ b/style/style.css
@@ -110,6 +110,10 @@ img {
   display: none;
 }
 
+.active {
+  text-decoration: underline;
+}
+
 .visually-hidden {
   width: 0.1rem;
   height: 0.1rem;
