Set explicit width and height to products in homepage for mobile view

--- a/style/_startsida.scss
+++ b/style/_startsida.scss
@@ -162,6 +162,10 @@ main.startsida {
         height: 30.8rem;
       }
       a {
+        img {
+          width: 2.4rem;
+          height: 10.2rem;
+        }
         p.country {
           font-size: $p-mobile-subheading-font;
         }
