Set explicit width and height to svgs in product listing page

--- a/style/_viner.scss
+++ b/style/_viner.scss
@@ -143,6 +143,8 @@ main.viner {
     }
     img.in-stock-img {
       display: inline-block;
+      width: 2.6rem;
+      height: 1.8rem;
       padding-right: 0.8rem;
     }
     p.in-stock {
@@ -164,6 +166,8 @@ main.viner {
     }
     img.add-to-cart-img {
       position: absolute;
+      width: 2.4rem;
+      height: 2.4rem;
       top: calc(50% - 1.2rem);
       left: calc(50% - 1.2rem);
     }
