Set explicit width and height to img flag and product item in product listing page

--- a/style/_produkt.scss
+++ b/style/_produkt.scss
@@ -31,6 +31,8 @@ main.produkt {
       color: $font-color-opacity-80;
     }
     img.flag {
+      width: 2.4rem;
+      height: 2.4rem;
       margin-right: 0.8rem;
     }
     p.price {
