--- a/style/_gallery.scss
+++ b/style/_gallery.scss
@@ -38,6 +38,10 @@
       margin-right: 1rem;
     }
   }
+  img.product-img {
+    width: 1.2rem;
+    height: 5rem;
+  }
 }
 
 // The elements for these stylings are created inside gallery.js when the user clicks on an image inside the gallery.
