Set explicit width and height to the video play button img in product Oddbird

--- a/style/_gallery.scss
+++ b/style/_gallery.scss
@@ -42,6 +42,10 @@
     width: 1.2rem;
     height: 5rem;
   }
+  img.product-video-img {
+    width: 2.4rem;
+    height: 2.4rem;
+  }
 }
 
 // The elements for these stylings are created inside gallery.js when the user clicks on an image inside the gallery.
