--- a/style/style.css
+++ b/style/style.css
@@ -506,6 +506,10 @@ input[type=checkbox]:before {
   width: 1.2rem;
   height: 5rem;
 }
+.gallery img.product-video-img {
+  width: 2.4rem;
+  height: 2.4rem;
+}
 
 .gallery-expanded {
   display: flex;
