--- a/style/style.css
+++ b/style/style.css
@@ -1218,6 +1218,10 @@ main.varukorg .varor .product-name-and-img {
   justify-content: normal;
   flex-direction: row;
 }
+main.varukorg .varor .product-name-and-img img {
+  width: 2.1rem;
+  height: 10rem;
+}
 main.varukorg .varor h3 {
   margin-left: 3rem;
   font-weight: 400;
@@ -1282,6 +1286,10 @@ main.varukorg .leverans button:hover {
     display: grid;
     grid-template-columns: 4fr 1fr 1.3fr;
     width: 100%;
+  }
+  main.varukorg .varor .product-name-and-img img {
+    width: 1.9rem;
+    height: 8rem;
   }
   main.varukorg .varor,
   main.varukorg .leverans {
