Major functionality added that lets the user add products to cart

--- a/style/_header.scss
+++ b/style/_header.scss
@@ -65,6 +65,9 @@ header {
     ul {
       @include flex(center, space-between, row);
     }
+    li.basket-container {
+      position: relative;
+    }
   }
   .sveriges-godaste-hamburgare {
     @include flex(center, center, row);
