--- a/style/_varukorg.scss
+++ b/style/_varukorg.scss
@@ -20,6 +20,9 @@ main.varukorg {
       align-self: center;
       text-align: center;
     }
+    #checkout {
+      width: 100%;
+    }
     article {
       margin-top: 2rem;
       padding: 1.5rem 1.2rem;
